# iamlink

./: .gitignore  db.sqlite3  dockerfile  pyproject.toml  readme.md  requirements.txt
url/: models.py  serializers.py  urls.py  views.py
url/migrations/: 0001_initial.py  0002_url_title.py  0003_url_company.py
url/templates/: index-old.html  index.html
url_project/: asgi.py  settings.py  urls.py  wsgi.py
