[tool.poetry]
name = "back-iamlink"
version = "0.1.0"
description = ""
authors = ["Dir <ooo_31@bk.ru>"]
readme = "README.md"
packages = [{include = "back_iamlink"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
dj-database-url = "2.1.0"
django = "4.2.7"
djangorestframework = "3.14.0"
gunicorn = "21.2.0"
packaging = "23.2"
pytz = "2023.3.post1"
sqlparse = "0.4.4"
typing-extensions = "4.8.0"
django-environ = "0.11.2"
django-cors-headers = "4.3.1"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
